# ChangeLog for net-im/kadu-qt4_sound
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  08 Dec 2008; Michał Ziąbkowski <mziab@o2.pl>
  -kadu-qt4_sound-0.6.5_rc2.ebuild, +kadu-qt4_sound-0.6.5.ebuild:
  Bumped. Removed previous version.

  12 Nov 2008; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-qt4_sound-0.6.5_rc2.ebuild:
  Bumped.
