@@ -1,3 +1,4 @@
-DIST kadu-0.6.5.tar.bz2 1312474 RMD160 26a80cb7b0c7dbc8c2c38ae9b8aa6609eb0fd8ad SHA1 9cacbec423c192f6482d9d67a163350191f5bfe2 SHA256 09f17f4b23a3ea8590135ff4a050b52565f3a364bfe4d986079c5be0bba83fdb
-EBUILD kadu-qt4_sound-0.6.5.ebuild 207 RMD160 338fac43418256f312a763b450c2a1db09b3f6ea SHA1 cd33d405baa5de2fc566c3219f2289173b87e43f SHA256 2aecb9f81f21054c4f3fdda983b021b73f7c2cf866ab3c631ff3231be2e1df32
-MISC ChangeLog 370 RMD160 67d0fe8933ea1d965662032577f01ff4b17e8b48 SHA1 fcbada83c04d3452b79015225e20befb8d43e0c2 SHA256 638a8b7ee1fdc30917d40c7e6b355f24a346bd206f0139bd566b237aeaee9cc3
+DIST kadu-0.6.5.1.tar.bz2 1341099 RMD160 3c1a8a770d0701e019b5ed68658d20ea6f789e45 SHA1 1257b37c30d9682d4fd350b78d983de04b970872 SHA256 e2df2e1d7c1fa9a5d931a35efeb936088c42ef4b5d42fef8dddadc40f87397e2
+EBUILD kadu-qt4_sound-0.6.5.1.ebuild 301 RMD160 58cb6f2e76901567fefe5ba2d146b0221b9b0ce2 SHA1 4d1e69aaea93c51ce809e0a43ee0a2f12b851874 SHA256 30ed8b3f0fd7ac44ffd807de6ef820ad6bec0069982e4c790d17caced3f1782a
+MISC ChangeLog 557 RMD160 762ccfd51c909e4bdfb70b56049a335c4a81912b SHA1 2394a6b93f480d7dc24a3438bc77ee2ddec67833 SHA256 23886ffede037033d20d2ec0aa4f40e384d0498c25dd4f3ae89918cfbcaf7a8b
+MISC metadata.xml 244 RMD160 fcdb1f5f93ea0a45207aa3ba4ec6cacbe527c0db SHA1 37fa1906c0e0ec9e8ee54787a8b97c1b23270f04 SHA256 e9d24a79e73b4d1d8577b7e887e96a818c4b807ed590c9b83de26cd30e0f0d3a
