@@ -1,0 +1,14 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: $
+
+inherit kadu-base
+
+MOD_DEPEND=">=net-im/kadu-sound-${PV}"
+
+inherit kadu-mod
+
+DESCRIPTION="Qt4 sound output module for Kadu"
+HOMEPAGE="http://kadu.net"
+KEYWORDS="amd64 x86"
+IUSE=""
