@@ -1,6 +1,11 @@
 # ChangeLog for net-im/kadu-qt4_sound
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  25 Jan 2009; Michał Ziąbkowski <mziab@o2.pl>
+  -kadu-qt4_sound-0.6.5.ebuild, +kadu-qt4_sound-0.6.5.1.ebuild,
+  +metadata.xml:
+  Bumped. Removed previous version. Some repoman fixes.
 
   08 Dec 2008; Michał Ziąbkowski <mziab@o2.pl>
   -kadu-qt4_sound-0.6.5_rc2.ebuild, +kadu-qt4_sound-0.6.5.ebuild:
